--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   http: 1.2.1
   shared_preferences: ^2.0.15
   dropdown_search: ^5.0.2
+  charts_flutter_new : 0.12.0
+  syncfusion_flutter_charts: ^21.2.4 
 
 
   # The following adds the Cupertino Icons font to your application.
