--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   dropdown_search: ^5.0.2
   charts_flutter_new : 0.12.0
   syncfusion_flutter_charts: ^21.2.4 
+  android_alarm_manager_plus: ^2.0.0
+  timezone: ^0.9.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,6 +47,14 @@ dependencies:
   image_picker: ^0.8.4+5
   intl: ^0.17.0
   flutter_native_splash: ^2.2.16
+  firebase_core: ^3.4.0
+  firebase_messaging: ^15.1.0
+  flutter_local_notifications: ^17.2.3
+  workmanager: ^0.5.0
+  permission_handler: ^10.2.0
+  mobile_scanner: ^2.0.0
+  local_auth: ^2.1.0
+  crypto: ^3.0.1   
 
 flutter_native_splash:
   android: true
