--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,8 @@ dependencies:
   permission_handler: ^10.2.0
   mobile_scanner: ^2.0.0
   local_auth: ^2.1.0
-  crypto: ^3.0.1   
+  crypto: ^3.0.1 
+  encrypt: ^5.0.1  
 
 flutter_native_splash:
   android: true
