--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   printing: ^5.8.0
   excel: ^2.0.7
   path_provider: ^2.1.5
+  provider: ^6.1.2
 
 flutter_native_splash:
   android: true
